--- a/about/index.html
+++ b/about/index.html
@@ -323,7 +323,7 @@
 
     
         <div id="gitments"></div>
-<script src="/https://www.wenjunjiang.win/js/gitment.js"></script>
+<script src="/js/gitment.browser.js"></script>
 <script>
     var gitment = new Gitment({
       id: window.location.pathname,
