--- a/about/index.html
+++ b/about/index.html
@@ -411,7 +411,7 @@
     })
 </script>
 
-<script async src="https://dn-lbstatics.qbox.me/busuanzi/2.3/busuanzi.pure.mini.js">
+<script async src="https://busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js">
 </script>
 
   <script language="javascript">
@@ -457,6 +457,7 @@
         _st('install','A1Pz-LKMXbrzcFg2FWi6','2.0.0');
       }
     </script>
+
 
   </div>
 </body>
