--- a/about/index.html
+++ b/about/index.html
@@ -328,10 +328,10 @@
     var gitment = new Gitment({
       id: window.location.pathname,
       owner: 'LLstar',
-      repo: 'LLstar.github.io',
+      repo: 'https://LLstar.github.io',
       oauth: {
-          client_id: 'f57e57fbb66da8252a62',
-          client_secret: '0b12b6c9790a2797e3625dade9a96c94cd451485',
+          client_id: '503223b8d61a488c660d',
+          client_secret: '81e61fa4fd1e6f2f10118b341d02d56ac29bc59e',
       },
     })
     gitment.render('gitments')
