--- a/about/index.html
+++ b/about/index.html
@@ -334,7 +334,7 @@
         repo: 'https://LLstar.github.io',
         owner: 'LLstar',
         admin: '',
-        distractionFreeMode: ''
+        distractionFreeMode: 'true'
     })
     gitalk.render('gitalk-container')
 </script>
