--- a/links/index.html
+++ b/links/index.html
@@ -439,28 +439,8 @@
                     <div class="card">
                         <img class="ava" src="https://www.sanshuifeibing.com/usr/images/avatar2.jpg">
                         <div class="card-header">
-                        <div><a href="https://www.sanshuifeibing.com" rel="external nofollow noreferrer" target="_blank">@ 三水非冰博客</a></div>
-                        <div class="info"></div>
-                        </div>
-                    </div>
-
-                
-
-                    <div class="card">
-                        <img class="ava" src="https://leafjame.github.io/images/beichen.png">
-                        <div class="card-header">
-                        <div><a href="https://leafjame.github.io" rel="external nofollow noreferrer" target="_blank">@ 北宸</a></div>
-                        <div class="info"></div>
-                        </div>
-                    </div>
-
-                
-
-                    <div class="card">
-                        <img class="ava" src="https://qianling.pw/images/avatar.png">
-                        <div class="card-header">
-                        <div><a href="https://qianling.pw/" rel="external nofollow noreferrer" target="_blank">@ 千灵夙赋</a></div>
-                        <div class="info"></div>
+                        <div><a href="https://youngjuning.js.org/" rel="external nofollow noreferrer" target="_blank">@ 杨俊宁的博客</a></div>
+                        <div class="info">怕什么真理无穷，进一寸有一寸的欢喜</div>
                         </div>
                     </div>
 
