--- a/links/index.html
+++ b/links/index.html
@@ -437,7 +437,7 @@
                 
 
                     <div class="card">
-                        <img class="ava" src="https://www.sanshuifeibing.com/usr/images/avatar2.jpg">
+                        <img class="ava" src="https://i.loli.net/2020/08/08/biZSKqsrCAJWzvT.jpg">
                         <div class="card-header">
                         <div><a href="https://youngjuning.js.org/" rel="external nofollow noreferrer" target="_blank">@ 杨俊宁的博客</a></div>
                         <div class="info">怕什么真理无穷，进一寸有一寸的欢喜</div>
